# mlperf_client

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_BUILD.md  utils.py  version.json
src/: .clang-tidy  CMakeLists.txt
src/CIL/: CMakeLists.txt  api_handler.cpp  api_handler.h  base_inference.cpp  base_inference.h  benchmark_logger.cpp  benchmark_logger.h  benchmark_result.h  command_option.cpp  command_option.h  command_parser.cpp  command_parser.h  compute_hashes.cmake  config_creator.cpp  config_creator.h  downloader.cpp  downloader.h  ep_dependencies_config.cpp  ep_dependencies_config.h  ep_dependencies_manager.cpp  ep_dependencies_manager.h  execution_config.cpp  execution_config.h  execution_provider.h  execution_provider_config.h  executor_base.h  executor_factory.cpp  executor_factory.h  file_signature_verifier.cpp  file_signature_verifier.h  hardware_monitor.h  io_report_reader.cpp  io_report_reader.h  minizip-patch.diff  minizip.cmake  mlperf_console_appender.cpp  mlperf_console_appender.h  model_config.cpp  model_config.h  pack_vendors_default.cmake  (+40 more)
src/CIL/IHV/: CMakeLists.txt  IHV.h
src/CIL/IHV/GGML/: CMakeLists.txt
src/CIL/IHV/GGML/src/: CMakeLists.txt  README.md  ggml_eps_config.h  ggml_eps_handler.cpp  ggml_eps_handler.h
src/CIL/IHV/GGML/src/LLM/: CMakeLists.txt  (+4 more)
src/CIL/IHV/MLX/: CMakeLists.txt
src/CIL/IHV/MLX/src/: CMakeLists.txt  README.md  api.h  mlx.cpp  mlx.h  mlx.patch  mlx_config.h
src/CIL/IHV/NativeOpenVINO/: CMakeLists.txt
src/CIL/IHV/NativeOpenVINO/src/: CMakeLists.txt  README.md  base_inference.cpp  base_inference.h  native_openvino.cpp  native_openvino.h  native_openvino_config.h  plugins.xml
src/CIL/IHV/NativeQNN/: CMakeLists.txt
src/CIL/IHV/NativeQNN/src/: CMakeLists.txt  README.md  base_inference.cpp  base_inference.h  native_qnn.cpp  native_qnn.h  native_qnn_config.h
src/CIL/IHV/OrtGenAI/: CMakeLists.txt
src/CIL/IHV/OrtGenAI-RyzenAI/: CMakeLists.txt
src/CIL/IHV/OrtGenAI-RyzenAI/src/: CMakeLists.txt  README.md  base_inference.cpp  base_inference.h  mlp_ort_genai_ryzenai.cpp  mlp_ort_genai_ryzenai.h
src/CIL/IHV/OrtGenAI/src/: CMakeLists.txt  README.md  base_inference.cpp  base_inference.h  mlp_ort_genai.cpp  mlp_ort_genai.h  mlp_ort_genai_config.h
src/CIL/IHV/WindowsML/: CMakeLists.txt
src/CIL/IHV/WindowsML/src/: CMakeLists.txt  README.md  base_inference.cpp  base_inference.h  windowsml.cpp  windowsml.h  windowsml_config.h
src/CIL/apple/: apple_utils.h  apple_utils.mm
src/CIL/benchmark/: benchmark_stage.cpp  benchmark_stage.h  data_verification_stage.cpp  data_verification_stage.h  download_stage.cpp  download_stage.h  preparation_stage.cpp  preparation_stage.h  runner.cpp  runner.h  scenario_data.h  stage.h
src/CIL/common/: CMakeLists.txt  IHV_handler_class.h  base_inference_common.cpp  base_inference_common.h  dylib.cmake  json_schema.cpp  json_schema.h  logger.h  math_utils.cpp  math_utils.h  scope_exit.h
src/CIL/common/directml/: CMakeLists.txt  adapter_enumeration.cpp  adapter_enumeration.h
src/CIL/common/llama2/: llama_config.h
src/CIL/common/llm/: llama_config.cpp  llama_config.h
src/CIL/deps_packer/: CMakeLists.txt  finddeps.cmake  main.cpp  pack_as_binary.cmake
src/CIL/ios/: ios_utils.h  ios_utils.mm
src/CIL/llama2/: llama2_executor.cpp  llama2_executor.h  llama2_inference.cpp  llama2_inference.h
src/CIL/llm/: llm_executor.cpp  llm_executor.h  llm_inference.cpp  llm_inference.h
src/CLI/: CMakeLists.txt  main.cpp  progress_tracker_handler.cpp  progress_tracker_handler.h  settings.h  system_controller.cpp  system_controller.h  version.h.in
src/Tests/: CMakeLists.txt  test_olive_llama2.py  test_tfm_tokenizer.cpp
src/gui/: CMakeLists.txt  app_resources.qrc  gui_progress_tracker_handler.cpp  gui_progress_tracker_handler.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  settings_manager.h  single_instance_guard.h
src/gui/controllers/: abstract_controller.cpp  abstract_controller.h  app_controller.cpp  app_controller.h  benchmark_controller.cpp  benchmark_controller.h  realtime_page_controller.cpp  realtime_page_controller.h  results_history_page_controller.cpp  results_history_page_controller.h  results_report_page_controller.cpp  results_report_page_controller.h  settings_page_controller.cpp  settings_page_controller.h  start_page_controller.cpp  start_page_controller.h
src/gui/core/: gui_utils.cpp  gui_utils.h  types.h
src/gui/ios/: Info.plist  Info.plist.app.in  LaunchScreen.storyboard  ios_utils.h  ios_utils.mm
src/gui/macos/: Info.plist.app.in  mlperf-macos.entitlements
src/gui/models/: results_history_model.cpp  results_history_model.h
src/gui/resources/: AppIcon.icns  styles.qss
src/gui/ui/: abstract_view.cpp  abstract_view.h  eula_page.cpp  eula_page.h  eula_widget.ui  realtime_monitoring_page.cpp  realtime_monitoring_page.h  results_history_page.cpp  results_history_page.h  results_history_page.ui  results_report_page.cpp  results_report_page.h  results_report_page.ui  settings_page.cpp  settings_page.h  settings_page.ui  start_page.cpp  start_page.h  start_page.ui
src/gui/ui/widgets/: benchmark_status_widget.cpp  benchmark_status_widget.h  capacity_widget_bar.cpp  capacity_widget_bar.h  checkable_combo_box.cpp  checkable_combo_box.h  circular_gauge_widget.cpp  circular_gauge_widget.h  circular_progress_bar_widget.cpp  circular_progress_bar_widget.h  elided_label.cpp  elided_label.h  ep_exapandable_widget.cpp  ep_exapandable_widget.h  ep_filters_expandable_widget.cpp  ep_filters_expandable_widget.h  ep_filters_widget.cpp  ep_filters_widget.h  ep_progress_widget.cpp  ep_progress_widget.h  execution_progress_widget.cpp  execution_progress_widget.h  expandable_widget.cpp  expandable_widget.h  filter_button.cpp  filter_button.h  flow_layout.cpp  flow_layout.h  information_card_widget.cpp  information_card_widget.h  json_schema_pair.cpp  json_schema_pair.h  logs_widget.cpp  logs_widget.h  path_combo_box.cpp  path_combo_box.h  pdf_viewer_widget.cpp  pdf_viewer_widget.h  popup_widget.cpp  popup_widget.h  (+19 more)
(+307 files in other folders)
